Fixed z-index of release box, added some more margin.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -505,7 +505,8 @@ textarea {
 }
 
 #release{
-	margin-top: 20px;
+    position: relative;
+	margin-top: 40px;
 	z-index: 100;
 	background-color: white;
 	padding: 8px;
